--- a/Presentation-Erasmus.html
+++ b/Presentation-Erasmus.html
@@ -50,9 +50,8 @@ https://templatemo.com/tm-551-stand-blog
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">
-                    <i class="fa fa-home" style="font-size: 1.5em;"></i>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home
                     <span class="sr-only">(current)</span>
                   </a>
                 </li> 
