--- a/about.html
+++ b/about.html
@@ -44,12 +44,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">
-                <i class="fa fa-home" style="font-size: 1.5em;"></i>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li> 
+            </li>  
             <li class="nav-item active">
               <a class="nav-link" href="about.html">ABOUT</a>
             </li>
