--- a/blog.html
+++ b/blog.html
@@ -44,9 +44,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">
-                <i class="fa fa-home" style="font-size: 1.5em;"></i>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li> 
