--- a/modelearticle.html
+++ b/modelearticle.html
@@ -138,27 +138,27 @@ https://templatemo.com/tm-551-stand-blog
             <div class="sidebar">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="sidebar-item recent-posts">
-                    <div class="sidebar-heading">
-                      <h2>Recent Posts</h2>
+                    <div class="sidebar-item recent-posts">
+                        <div class="sidebar-heading">
+                            <h2>Recent Posts</h2>
+                        </div>
+                        <div class="content">
+                            <ul>
+                                <li><a href="RomainM-1-post-details.html">
+                                    <h5>[Titre recent Post #1]</h5>
+                                    <span>[Date correspondante]</span>
+                                </a></li>
+                                <li><a href="post-details.html">
+                                    <h5>[Titre recent Post #2]</h5>
+                                    <span>[Date correspondante]</span>
+                                </a></li>
+                                <li><a href="post-details.html">
+                                    <h5>[Titre recent Post #3]</h5>
+                                    <span>[Date correspondante]</span>
+                                </a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="content">
-                      <ul>
-                        <li><a href="RomainM-1-post-details.html">
-                          <h5>ARRIVAL IN LODZ, POLAND</h5>
-                          <span>Feb 21, 2023</span>
-                        </a></li>
-                        <li><a href="post-details.html">
-                          <h5>Street Art in Lodz, Poland</h5>
-                          <span>2023</span>
-                        </a></li>
-                        <li><a href="post-details.html">
-                          <h5>Swag hella echo park leggings, shaman cornhole ethical coloring</h5>
-                          <span>May 14, 2020</span>
-                        </a></li>
-                      </ul>
-                    </div>
-                  </div>
                 </div>
                 
                 <div class="col-lg-12">
@@ -168,7 +168,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                     <div class="content">
                       <ul>
-                        <li><a href="#">Romain M</a></li>
+                        <li><a href="#">Romain M [mettre en lien la page avec tout les articles de la personne]</a></li>
                         <li><a href="#">Eloi</a></li>
                         <li><a href="#">Romain J</a></li>
                         <li><a href="#">Clément</a></li>
