--- a/Presentation-Erasmus.html
+++ b/Presentation-Erasmus.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="https://c1.wallpaperflare.com/preview/603/470/377/loft-bricks-old-architecture.jpg" alt="">
+                      <img src="https://images.unsplash.com/photo-1535016120720-40c646be5580?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" style="height: 420px;" alt="">
                     </div>
                     <div class="down-content">
                       <span>Arrival</span>
@@ -150,13 +150,13 @@ https://templatemo.com/tm-551-stand-blog
                           <h5>ARRIVAL IN LODZ, POLAND</h5>
                           <span>Feb 21, 2023</span>
                         </a></li>
-                        <li><a href="post-details.html">
+                        <li><a href="Street-Art-Lodz.html">
                           <h5>Street Art in Lodz, Poland</h5>
-                          <span>2023</span>
+                          <span>march, 2023</span>
                         </a></li>
-                        <li><a href="post-details.html">
-                          <h5>Swag hella echo park leggings, shaman cornhole ethical coloring</h5>
-                          <span>May 14, 2020</span>
+                        <li><a href="Presentation-Erasmus.html">
+                          <h5>Erasmus Presentation</h5>
+                          <span>Jan 19, 2023</span>
                         </a></li>
                       </ul>
                     </div>
