--- a/about.html
+++ b/about.html
@@ -111,8 +111,9 @@
         <p>Third year student in computer science </p>
       </div>
         <div class="col-lg-4">
+          <img src="Images/PP_Eloi.jpeg">
         <h4>Eloi Anquetil - IR3</h4>
-        <p>Third year student in computer science </p>
+        <p>I’ve got more muscle than brain.</p>
       </div>
       </div>
       
