--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
         <h4>Romain Jaffré - IR3</h4>
-        <p>Third year student in computer science </p>
+        <p>Hi! I am an introvert person, so be alone isn’t a problem for me, I’m OK with that. I should be the most serious guy of our group (the only one). I planned to have fun and visit a lot during my Erasmus as soon as I will have finish my work, in group or alone. I really want to enjoy my travel by partying, visiting, discovering people and I hope it will be the best experience in my life.        </p>
       </div>
         <div class="col-lg-4">
           <img src="Images/PP_Eloi.jpeg">
@@ -119,6 +119,7 @@
       
       <div class="row">
         <div class="col-lg-4 col-md-6">
+          <img src="Images/LANING_Damien.jpg">
         <h4>Damien Laning - IR3</h4>
         <p>Third year student in computer science </p>
         
