--- a/Street-Art-Lodz.html
+++ b/Street-Art-Lodz.html
@@ -80,8 +80,8 @@ https://templatemo.com/tm-551-stand-blog
           <div class="row">
             <div class="col-lg-12">
               <div class="text-content">
-                <h4>Arrival</h4>
-                <h2>Arrival in Lodz, Poland</h2>
+                <h4>Art</h4>
+                <h2>Street art in Lodz</h2>
               </div>
             </div>
           </div>
