--- a/about.html
+++ b/about.html
@@ -103,16 +103,17 @@
       
       <div class="row">
         <div class="col-lg-4 col-md-6">
-        <h4>Romain Mahot - IR3</h4>
+        <h4>Romain Mahot - </h4>
         <p>Third year student in computer science </p>
         </div>
         <div class="col-lg-4 col-md-6">
-        <h4>Romain Jaffré - IR3</h4>
+          <img src="Images/PP_Jaffre.jpg" >
+        <h4>Romain Jaffré - The crazy loner</h4>
         <p>Hi! I am an introvert person, so be alone isn’t a problem for me, I’m OK with that. I should be the most serious guy of our group (the only one). I planned to have fun and visit a lot during my Erasmus as soon as I will have finish my work, in group or alone. I really want to enjoy my travel by partying, visiting, discovering people and I hope it will be the best experience in my life.        </p>
       </div>
         <div class="col-lg-4">
           <img src="Images/PP_Eloi.jpeg">
-        <h4>Eloi Anquetil - IR3</h4>
+        <h4>Eloi Anquetil - The Muscle Mommy </h4>
         <p>I’ve got more muscle than brain.</p>
       </div>
       </div>
@@ -120,16 +121,16 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <img src="Images/LANING_Damien.jpg">
-        <h4>Damien Laning - IR3</h4>
+        <h4>Damien Laning - </h4>
         <p>Third year student in computer science </p>
         
         </div>
         <div class="col-lg-4 col-md-6">
-        <h4>Clément Choupault - IR3</h4>
+        <h4>Clément Choupault - </h4>
         <p>Third year student in computer science </p>
       </div>
         <div class="col-lg-4">
-        <h4>Titouan Reulier - IR3</h4>
+        <h4>Titouan Reulier - </h4>
         <p>Third year student in computer science</p>
       </div>
       </div>
