--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
           <p>1. Geographical location: Lodz, Poland. <br>Lodz is the fourth biggest city of Poland. The city is situated in the center of Poland, near Warsaw the capital. The city is in the Lodzki region. The name come from the river Lodzka near the city who cross the whole region.</p>
           <p>2. University: Lodz University of Technology  <br>The University where we will study is called by several names: Lodz University of Technology (TUL) but also Politechnika Łódzka. It is a good university, with good ranks in Europe. In 2022, there is about 25 000 students and 1830 researchers and teachers who works in it. The university took parts in several greats building made from bricks with a beautiful environment around it, like the lake behind the main building.</p>  
           <p> 3. Population : <br> There are about 700 000 inhabitants in Lodz city and about 1 million with the agglomeration. The city is big as Paris in term of built areas and is like Lyon city in France.<br> Lodz is an old city; the most ancient writings came from the XIV century. It is a very industrial oriented city and was called “The Manchester of Poland” because the city was specialized in textile for decades since the industrial revolution. Lodz has a particular role in the history of Poland.</p>
-          <p>4. Interesting place : <br> PIOTRKOWSKA STREET, MANUFAKTURA, PALACE OF I. POZNAŃSKI, INNER TUBE" MUSEUM OF CANAL, MUSEUM OF ART & MS2, MURALS</p>  
+          <p>4. Interesting place : <br> PIOTRKOWSKA STREET, MANUFAKTURA, PALACE OF I. POZNAŃSKI, INNER TUBE" MUSEUM OF CANAL, MUSEUM OF ART & MS2, MURALS <br><br><img src="assets/images/Manufaktura.jpg" style="height: 400px; width:600px;"></p>  
           <p>5. How to get there ? <br> There are several ways to go in Lodz because the city has several train stations and an airport. We planned to go in Lodz by plane around the twenty-four th of February.</p> 
           <p>6. Student life : <br> Student life in Lodz, Poland is very lively and diverse. There are many universities and colleges in the city. Cultural life in Lodz is rich and varied, with many museums, theatres and cinemas. The city is also known for its Art architecture and textile heritage. Students can also take part in sports activities, such as football, basketball and handball, as well as clubs and student associations. There are about 144,000 students studying in Lodz. The city has many bars, clubs and restaurants and is known for being very quiet during the day but with a great festive and joyful atmosphere at night.</p>
           <p>7. Public transports : <br> 
@@ -159,7 +159,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <img src="Images/PP_Mahot.png" style="border-radius: 50%;">
-        <h4>Romain Mahot - </h4>
+        <h4>Romain Mahot - The Explorer</h4>
         <p>Third year student in computer science </p>
         </div>
         <div class="col-lg-4 col-md-6">
