--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <img src="Images/PP_Mahot.jpg" style="border-radius: 100%; width : 50%; ">
-        <h4>Romain Mahot - </h4>
+        <h4>Romain Mahot - The Explorer</h4>
         <p>Third year student in computer science </p>
         </div>
         <div class="col-lg-4 col-md-6">
@@ -167,9 +167,7 @@
         <h4>Romain Jaffré - The crazy loner</h4>
         <p>Hi! I am an introvert person, so be alone isn't a problem for me, I'm OK with that. 
           I should be the most serious guy of our group (the only one). 
-          I planned to have fun and visit a lot during my Erasmus as soon as I will have finish my work, in group or alone. 
-          I really want to enjoy my travel by partying, visiting, discovering people and I hope it will be the best experience in my life.
-        </p>
+          </p>
       </div>
         <div class="col-lg-4">
           <img src="Images/PP_Eloi.jpeg" style="border-radius: 100%; width : 50%; ">
@@ -181,13 +179,13 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <img src="Images/LANING_Damien.jpg" style="border-radius: 100%; width : 50%;">
-        <h4>Damien Laning - </h4>
+        <h4>Damien Laning - The Two Time Erasmus</h4>
         <p>Third year student in computer science </p>
         
         </div>
         <div class="col-lg-4 col-md-6">
           <img src="Images/PP_Choupault.jpeg" style="border-radius: 100%; width : 50%; ">
-        <h4>Clément Choupault - </h4>
+        <h4>Clément Choupault - The French Beret</h4>
         <p>Third year student in computer science </p>
       </div>
         <div class="col-lg-4">
