--- a/about.html
+++ b/about.html
@@ -159,7 +159,9 @@
         <img src="Images/saint_peter_and_paul_church_interior_krakow.jpeg">
         <img src="Images/saint_mary_basilica_interior.jpeg">
         <img src="Images/st_peter_church_exterior_krakow.jpeg">
-        <img>
+        <img src="Images/StMarysBasilicaKrakow_exterior.webp">
+        <img src="Images/town_hall_Zamosc.jpeg">
+        <img src="Images/wawel_cathedral.jpeg">
       </p>
         </div>
       </div>
