--- a/about.html
+++ b/about.html
@@ -153,15 +153,15 @@
             
             
             </p>
-            <p><img src="Images/church-of-the-visitation-of-the-blessed-virgin-mary-in-krakow-krakow-lesser-poland-poland.jpeg">
-            <img src="Images/flying_buttresses.jpeg">
-          <img src="Images/raoyal_castle_warsow_renaissance.jpeg">
-        <img src="Images/saint_peter_and_paul_church_interior_krakow.jpeg">
-        <img src="Images/saint_mary_basilica_interior.jpeg">
-        <img src="Images/st_peter_church_exterior_krakow.jpeg">
-        <img src="Images/StMarysBasilicaKrakow_exterior.webp">
-        <img src="Images/town_hall_Zamosc.jpeg">
-        <img src="Images/wawel_cathedral.jpeg">
+            <p><img src="Images/church-of-the-visitation-of-the-blessed-virgin-mary-in-krakow-krakow-lesser-poland-poland.jpeg" style="width : 50%; ">
+            <img src="Images/flying_buttresses.jpeg" style="width : 50%; ">
+          <img src="Images/raoyal_castle_warsow_renaissance.jpeg" style="width : 50%; ">
+        <img src="Images/saint_peter_and_paul_church_interior_krakow.jpeg" style="width : 50%; ">
+        <img src="Images/saint_mary_basilica_interior.jpeg" style="width : 50%; ">
+        <img src="Images/st_peter_church_exterior_krakow.jpeg" style="width : 50%; ">
+        <img src="Images/StMarysBasilicaKrakow_exterior.webp" style="width : 50%; ">
+        <img src="Images/town_hall_Zamosc.jpeg" style="width : 50%; ">
+        <img src="Images/wawel_cathedral.jpeg"style="width : 50%; ">
       </p>
         </div>
       </div>
