--- a/about.html
+++ b/about.html
@@ -153,15 +153,21 @@
             
             
             </p>
-            <p><img src="Images/church-of-the-visitation-of-the-blessed-virgin-mary-in-krakow-krakow-lesser-poland-poland.jpeg" style="width : 50%; ">
-            <img src="Images/flying_buttresses.jpeg" style="width : 50%; ">
-          <img src="Images/raoyal_castle_warsow_renaissance.jpeg" style="width : 50%; ">
-        <img src="Images/saint_peter_and_paul_church_interior_krakow.jpeg" style="width : 50%; ">
-        <img src="Images/saint_mary_basilica_interior.jpeg" style="width : 50%; ">
-        <img src="Images/st_peter_church_exterior_krakow.jpeg" style="width : 50%; ">
-        <img src="Images/StMarysBasilicaKrakow_exterior.webp" style="width : 50%; ">
-        <img src="Images/town_hall_Zamosc.jpeg" style="width : 50%; ">
-        <img src="Images/wawel_cathedral.jpeg"style="width : 50%; ">
+            <p style="display: flex; flex-direction: column;">
+            <div><img src="Images/church-of-the-visitation-of-the-blessed-virgin-mary-in-krakow-krakow-lesser-poland-poland.jpeg" style=" width: 33%; ">
+            <img src="Images/flying_buttresses.jpeg" style="width : 50%; width: 33%; ">
+          <img src="Images/raoyal_castle_warsow_renaissance.jpeg" style="width : 50%;  width:  33%; ">
+          </div>
+          <div>
+        <img src="Images/saint_peter_and_paul_church_interior_krakow.jpeg" style="width : 50%; width: 33%; ">
+        <img src="Images/saint_mary_basilica_interior.jpeg" style="width : 50%; width: 33%; ">
+        <img src="Images/st_peter_church_exterior_krakow.jpeg" style="width : 50%; width: 33%; ">
+        </div>
+        <div>
+        <img src="Images/StMarysBasilicaKrakow_exterior.webp" style="width : 50%; width: 33%; ">
+        <img src="Images/town_hall_Zamosc.jpeg" style="width : 50%; width: 33%; ">
+        <img src="Images/wawel_cathedral.jpeg"style="width : 50%; width: 33%; ">
+      </div>
       </p>
         </div>
       </div>
