--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="https://ostravadventure.netlify.app"><h2>Ostrav'Adventure<em>.</em></h2></a>
+        <a class="navbar-brand" target="_blank" href="https://ostravadventure.netlify.app"><h2>Ostrav'Adventure<em>.</em></h2></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
