--- a/Presentation-Erasmus.html
+++ b/Presentation-Erasmus.html
@@ -141,7 +141,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                     <div class="content">
                       <ul>
-                        <li><a href="RomainM-1-post-details.html">
+                        <li><a href="arrivallodz.html">
                           <h5>ARRIVAL IN LODZ, POLAND</h5>
                           <span>Feb 21, 2023</span>
                         </a></li>
