--- a/contact.html
+++ b/contact.html
@@ -139,11 +139,11 @@
                     <ul>
                       
                       <li>
-                        <h5>rmahot.ir2025@esaip.com</h5>
-                        <h5>jac_color@protonmail.com</h5>
-                        <h5>info@company.com</h5>
-                        <h5>info@company.com</h5>
-                        <h5>info@company.com</h5>
+                        <h5>rmahot.ir2025@esaip.org</h5>
+                        <h5>cchoupault.ir2025@esaip.org</h5>
+                        <h5>eanquetil.ing2025@esaip.org</h5>
+                        <h5>rjaffre.ing2025@esaip.org</h5>
+                        <h5>dlanning.ir2025@esaip.org</h5>
                         <span>EMAIL ADDRESS</span>
                       </li>
                       <li>
