--- a/manufaktura.html
+++ b/manufaktura.html
@@ -107,26 +107,25 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="#">Romain J.</a></li>
                         <li><a href="#">Feb. 10th</a></li>
                       </ul>
-                      <p> What is Manufaktura ?
+                      <p> <span style="color: black; text-decoration: underline;">What is Manufaktura ?</span>
                         <br><br>
                         Manufaktura is a shopping, services and entertainment centre, who opened on 17 May 2006 in the centre of the city of Łódź. It is located between Zachodnia, Ogrodowa, Drewnowska and Jana Karskiego streets on the site of the old Izrael Poznański factory complex.
                         <br><br>
-                        History of Manufaktura (Łódź):
+                        <span style="color: black; text-decoration: underline;"> History of Manufaktura (Łódź):</span>
                         <br>
                         Before being modernized, the buildings of the Manufaktura were built in the early 19th century by Izrael Kalmanowicz Poznański, for industrial purposes to create a large industrial complex. Indeed, Izrael Poznański, who was one of the three men to be nicknamed "The King of Cotton", established these many buildings in Lodz for his textile manufacturing activity. It is for this reason that the city of Lodz got the nickname "Manchester of the Russian empire" because Manchester was an important city of Great Britain where the activity around the textile was very present.
                         <br><br>
-                        What can we find inside Manufaktura?
+                        <span style="color: black; text-decoration: underline;">What can we find inside Manufaktura?</span>
                         <br>
                         In Manufaktura shopping center you can find about 60 restaurants and café, if you need to eat or drink. But there are also an entertainment and leisure centre with a cinema, a bowling alley, an artificial climbing wall, a fitness club and skateboard park. About the details of these services and leisure, there are 15 rooms in the cinema (one with a 3D screen) and the artificial climbing wall is 10.5m high, with more than 50 climbing routes of varying difficulty from beginner to expert. 
-                        <br>
+                        <br><br>
                         Finally, Manufaktura is also offering a cultural activity with several museums inside a complex such as a branch of the Art Museum, the Łódź History Museum, the Factory Museum and the Experymentarium (It is the beginning of the Technology Museum and the International Centre for Fashion Promotion). 
-                        <br>
+                        <br><br>
                         In total, there are 260 stores in Manufaktura (including 2 hypermarkets), and in a tertiary area 
-                        <br>
                          occupying 12,000 m², offices, including a bank, an automotive center and a four-star Andel hotel with 200 rooms. 
-                        
+                        <br><br>
                         There is a 3.5-hectare market in the centre of Manufaktura which regularly hosts concerts or sports competitions and various events. In summer, part of the estate is occupied by a sandy beach and in winter by an ice rink. At 300m was built the longest fountain in Europe, whose water is lit in the evening. Music is played from the speakers all the time. 
-                        <br>
+                        <br><br>
                         Customers of the Manufaktura can be transported by two Trambuses (contraction of "tram" and "buses" due to the look of the vehicles). 
                         <br><br>
                         Thanks for reading, I hope you have enjoyed reading this article and find useful information in it, I recommend that you can read other articles I have written or written by my friends. </p>
