--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                </a>
+                </div></a>
               </div>
               <div class="col-lg-12">
                 <div class="blog-post">
