--- a/manufaktura.html
+++ b/manufaktura.html
@@ -107,11 +107,11 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="#">Romain J.</a></li>
                         <li><a href="#">Feb. 10th</a></li>
                       </ul>
-                      <p> <span style="color: black; text-decoration: underline;">What is Manufaktura ?</span>
+                      <p> <span style="color: black; text-decoration: underline; font-size: 15px;">What is Manufaktura ?</span>
                         <br><br>
                         Manufaktura is a shopping, services and entertainment centre, who opened on 17 May 2006 in the centre of the city of Łódź. It is located between Zachodnia, Ogrodowa, Drewnowska and Jana Karskiego streets on the site of the old Izrael Poznański factory complex.
                         <br><br>
-                        <span style="color: black; text-decoration: underline;"> History of Manufaktura (Łódź):</span>
+                        <span style="color: black; text-decoration: underline;font-size: 15px;"> History of Manufaktura (Łódź):</span>
                         <br>
                         Before being modernized, the buildings of the Manufaktura were built in the early 19th century by Izrael Kalmanowicz Poznański, for industrial purposes to create a large industrial complex. Indeed, Izrael Poznański, who was one of the three men to be nicknamed "The King of Cotton", established these many buildings in Lodz for his textile manufacturing activity. It is for this reason that the city of Lodz got the nickname "Manchester of the Russian empire" because Manchester was an important city of Great Britain where the activity around the textile was very present.
                         <br><br>
