--- a/manufaktura.html
+++ b/manufaktura.html
@@ -107,15 +107,15 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="#">Romain J.</a></li>
                         <li><a href="#">Feb. 10th</a></li>
                       </ul>
-                      <p> <span style="color: black; text-decoration: underline; font-size: 15px;">What is Manufaktura ?</span>
-                        <br><br>
+                      <p> <span style="color: black;  font-size: 15px;">What is Manufaktura ?</span>
+                        <br>
                         Manufaktura is a shopping, services and entertainment centre, who opened on 17 May 2006 in the centre of the city of Łódź. It is located between Zachodnia, Ogrodowa, Drewnowska and Jana Karskiego streets on the site of the old Izrael Poznański factory complex.
                         <br><br>
-                        <span style="color: black; text-decoration: underline;font-size: 15px;"> History of Manufaktura (Łódź):</span>
+                        <span style="color: black;font-size: 15px;"> History of Manufaktura (Łódź):</span>
                         <br>
                         Before being modernized, the buildings of the Manufaktura were built in the early 19th century by Izrael Kalmanowicz Poznański, for industrial purposes to create a large industrial complex. Indeed, Izrael Poznański, who was one of the three men to be nicknamed "The King of Cotton", established these many buildings in Lodz for his textile manufacturing activity. It is for this reason that the city of Lodz got the nickname "Manchester of the Russian empire" because Manchester was an important city of Great Britain where the activity around the textile was very present.
                         <br><br>
-                        <span style="color: black; text-decoration: underline;">What can we find inside Manufaktura?</span>
+                        <span style="color: black;font-size: 15px;">What can we find inside Manufaktura?</span>
                         <br>
                         In Manufaktura shopping center you can find about 60 restaurants and café, if you need to eat or drink. But there are also an entertainment and leisure centre with a cinema, a bowling alley, an artificial climbing wall, a fitness club and skateboard park. About the details of these services and leisure, there are 15 rooms in the cinema (one with a 3D screen) and the artificial climbing wall is 10.5m high, with more than 50 climbing routes of varying difficulty from beginner to expert. 
                         <br><br>
