--- a/manufaktura.html
+++ b/manufaktura.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="#">Romain J.</a></li>
                         <li><a href="#">Feb. 10th</a></li>
                       </ul>
-                      <p> <span style="color: black;  font-size: 14px;">What is Manufaktura ?</span>
+                      <p style="text-align: justify;"> <span style="color: black;  font-size: 14px;">What is Manufaktura ?</span>
                         <br>
                         Manufaktura is a shopping, services and entertainment centre, who opened on 17 May 2006 in the centre of the city of Łódź. It is located between Zachodnia, Ogrodowa, Drewnowska and Jana Karskiego streets on the site of the old Izrael Poznański factory complex.
                         <br><br>
