--- a/arrivallodz.html
+++ b/arrivallodz.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="#">Eloi</a></li>
                         <li><a href="#">Jan. 26</a></li>
                       </ul>
-                      <p> Hi Everyone,
+                      <p style="text-align: justify;"> Hi Everyone,
                         <br>
                         <br> 
                         I'm writing today to explain you how i am going to Lodz. First i'm not going there alone, i will get there with Romain J.
