--- a/manufaktura.html
+++ b/manufaktura.html
@@ -132,11 +132,11 @@ https://templatemo.com/tm-551-stand-blog
                         <br><br>
                         Customers of the Manufaktura can be transported by two Trambuses (contraction of "tram" and "buses" due to the look of the vehicles). 
                         <br><br>
-                        <img src="Images/Trambus.png" style="width: 100%;" alt="Trambus driving along the road"></p><p style="padding-top :0px ;color: black;font-size: 14px; text-align: center; border-top: 0px solid #eee; border-bottom: 0px solid #eee;">Trambus driving along the road.</p><p style="style="border-bottom: 0px solid #eee;"border-top: 0px solid #eee;">
+                        <img src="Images/Trambus.png" style="width: 100%;" alt="Trambus driving along the road"></p><p style="padding-top :0px ;color: black;font-size: 14px; text-align: center; border-top: 0px solid #eee; border-bottom: 0px solid #eee;">Trambus driving along the road.</p><p style="border-bottom: 0px solid #eee;border-top: 0px solid #eee;">
                         
                         Thanks for reading, I hope you have enjoyed reading this article and find useful information in it, I recommend that you can read other articles I have written or written by my friends. 
                       </p>
-                      <p style=" border-top: 0px solid #eee;border-bottom: 0px solid #eee;">Sources:</p>
+                      <p style=" border-bottom: 0px solid #eee;">Sources:</p>
                       <ul>
                       <li><a href="https://www.manufaktura.com/site/519/history/history" target="_blank">Manufaktura.com</a></li>
                       <li><a href="https://en.wikipedia.org/wiki/Manufaktura#:~:text=The%20Manufaktura%20opened%20on%2017,an%20old%20textile%20factory%20building"target="_blank" >wikipedia.org</a></li>
