--- a/manufaktura.html
+++ b/manufaktura.html
@@ -138,7 +138,7 @@ https://templatemo.com/tm-551-stand-blog
                       </p>
                       <p style=" border-bottom: 0px solid #eee;padding-bottom :0px ;">Sources:</p>
                       <ul style="padding-top :0px ;">
-                      <li><a href="https://www.manufaktura.com/site/519/history/history" target="_blank">Manufaktura.com</a></li>
+                      <li><a href="https://www.manufaktura.com/site/519/history/history" target="_blank">manufaktura.com</a></li>
                       <li><a href="https://en.wikipedia.org/wiki/Manufaktura#:~:text=The%20Manufaktura%20opened%20on%2017,an%20old%20textile%20factory%20building"target="_blank" >wikipedia.org</a></li>
                       <li><a href="https://www.inyourpocket.com/lodz/manufaktura-lodzs-industrial-past-and-present-in_73616f" target="_blank">inyourpocket.com</a></li>
                       </ul>
