--- a/manufaktura.html
+++ b/manufaktura.html
@@ -136,7 +136,7 @@ https://templatemo.com/tm-551-stand-blog
                         
                         Thanks for reading, I hope you have enjoyed reading this article and find useful information in it, I recommend that you can read other articles I have written or written by my friends. 
                       </p>
-                      <p style=" border-bottom: 0px solid #eee;padding-bottom :0px ;">Sources:</p>
+                      <p style=" border-bottom: 0px solid #eee;padding-bottom :0px ;margin :0px ;">Sources:</p>
                       <ul style="padding-top :0px ;">
                       <li><a href="https://www.manufaktura.com/site/519/history/history" target="_blank">manufaktura.com</a></li>
                       <li><a href="https://en.wikipedia.org/wiki/Manufaktura#:~:text=The%20Manufaktura%20opened%20on%2017,an%20old%20textile%20factory%20building"target="_blank" >wikipedia.org</a></li>
