--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                 <li><a href="#">Eloi A.</a></li>
                 <li><a href="#">Feb. 11</a></li>
               </ul>
-          </a>
+          
           </div>
           </div>
+        </a>
         </div>
         <div class="item">
           <a href="manufaktura.html">
@@ -103,11 +104,13 @@
                 <li><a href="#">Romain J</a></li>
                 <li><a href="#">Feb. 10</a></li>
               </ul>
+          
+          </div>
+          </div>
           </a>
-          </div>
-          </div>
         </div>
         <div class="item">
+          <a href="Street-Art-Lodz.html">
           <img src="https://images.unsplash.com/photo-1617400120050-a1e45fa16c02?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1772&q=80" style="height: 440px;" alt="">
           <div class="item-content">
             <div class="main-content">
@@ -121,8 +124,10 @@
               </ul>
             </div>
           </div>
+          </a>
         </div>
         <div class="item">
+          <a href="Presentation-Erasmus.html">
            <img src="https://images.unsplash.com/photo-1535016120720-40c646be5580?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" style="height: 440px;" alt="">
           <div class="item-content">
             <div class="main-content">
@@ -136,6 +141,7 @@
               </ul>
             </div>
           </div>
+          </a>
         </div>
       </div>
     </div>
