--- a/journeyprep.html
+++ b/journeyprep.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="https://c1.wallpaperflare.com/preview/603/470/377/loft-bricks-old-architecture.jpg" alt="">
+                      <img src="Images/travel-accessories-prepared-trip-wooden-background-vector-illustration-87496625.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>Arrival</span>
