--- a/blog.html
+++ b/blog.html
@@ -209,7 +209,7 @@
               <div class="col-lg-6">
                 <div class="blog-post">
                   <div class="blog-thumb">
-                    <img src="https://images.unsplash.com/photo-1617400120050-a1e45fa16c02?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1772&q=80" style="height: 320epx;" alt="">
+                    <img src="Images/travel-accessories-prepared-trip-wooden-background-vector-illustration-87496625.jpg" style="height: 320epx;" alt="">
                   </div>
                   <div class="down-content">
                     <span>Art</span>
