--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
                     </div>
                   </div>
 
-                  <!--<div class="col-lg-12">
+                  <!--
+                    <div class="col-lg-12">
                     <div class="blog-post">
                       <div class="blog-thumb">
                         <img src="Images/Lodz_cathedral.jpg" alt="">
