--- a/elcubano.html
+++ b/elcubano.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="https://c1.wallpaperflare.com/preview/603/470/377/loft-bricks-old-architecture.jpg" alt="">
+                      <img src="Images/LANING_Damien.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>[objet]</span>
