--- a/modelearticle.html
+++ b/modelearticle.html
@@ -170,7 +170,7 @@ https://templatemo.com/tm-551-stand-blog
                       <ul>
                         <li><a href="#">Romain M [mettre en lien la page avec tout les articles de la personne]</a></li>
                         <li><a href="#">Eloi</a></li>
-                        <li><a href="#">Romain J</a></li>
+                        <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="#">Clément</a></li>
                         <li><a href="#">Titouan</a></li>
                         <li><a href="#">Damien</a></li>
