--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                     <ul>
                       <li><a href="#">Romain M</a></li>
                       <li><a href="#">Eloi</a></li>
-                      <li><a href="#">Romain J</a></li>
+                      <li><a href="blogRomainJ.html">Romain J</a></li>
                       <li><a href="#">Clément</a></li>
                       <li><a href="#">Titouan</a></li>
                       <li><a href="#">Damien</a></li>
