--- a/blogRomainJ.html
+++ b/blogRomainJ.html
@@ -191,12 +191,12 @@
                   </div>
                   <div class="content">
                     <ul>
-                      <li><a href="#">Romain M</a></li>
-                      <li><a href="#">Eloi</a></li>
-                      <li><a href="#">Romain J</a></li>
-                      <li><a href="#">Clément</a></li>
-                      <li><a href="#">Titouan</a></li>
-                      <li><a href="#">Damien</a></li>
+                      <li><a href="blogRomainM.html">Romain M </a></li>
+                      <li><a href="blogEloiA.html">Eloi</a></li>
+                      <li><a href="blogRomainJ.html">Romain J</a></li>
+                      <li><a href="blogClementC.html">Clément</a></li>
+                      <li><a href="blogTitouanR.html">Titouan</a></li>
+                      <li><a href="blogDamienL.html">Damien</a></li>
                     </ul>
                   </div>
                 </div>
