--- a/CinemaInLodz.html
+++ b/CinemaInLodz.html
@@ -180,6 +180,7 @@ From my point of view, I find the history of cinema in Lodz a fascinating subjec
                         <li><a href="blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
                         <li><a href="blogDamienL.html">Damien</a></li>
+                        <li><a href="blogBastien.html">Bastien</a></li>
                       </ul>
                     </div>
                   </div>
