--- a/blog.html
+++ b/blog.html
@@ -484,6 +484,7 @@
                       <li><a href="blogClementC.html">Clément</a></li>
                       <li><a href="blogTitouanR.html">Titouan</a></li>
                       <li><a href="blogDamienL.html">Damien</a></li>
+                      <li><a href="blogBastien.html">Bastien</a></li>
                     </ul>
                   </div>
                 </div>
