--- a/elcubano.html
+++ b/elcubano.html
@@ -174,9 +174,9 @@ https://templatemo.com/tm-551-stand-blog
                                     <h5>Musculation's Dietetics</h5>
                                     <span>Mar. 26</span>
                                 </a></li>
-                                <li><a href="Street-Art-Lodz.html">
-                                    <h5>Street Art in Lodz</h5>
-                                    <span>Mar. 26</span>
+                                <li><a href="CinemaInLodz.html">
+                                    <h5>THE FILM INDUSTRY IN LODZ</h5>
+                                    <span>Mar. 2</span>
                                 </a></li>
                                 <li><a href="Street-Art-Lodz.html">
                                     <h5>Street Art in Lodz</h5>
