--- a/article2eloi.html
+++ b/article2eloi.html
@@ -187,7 +187,7 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
                         <li><a href="blogDamienL.html">Damien</a></li>
-                        <li><a href="blogBastien.html">Bastien</a></li>
+                        <li><a href="blogBastien.html">Bastiendfghjhgfdfghjhgfdfgh</a></li>
                       </ul>
                     </div>
                   </div>
