--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="Images/Lodz_cathedral.jpg" alt="">
+                      <img src="Images/Park/ParkBackground.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>City</span>
