petites modifications sur le texte

--- a/journeyprep.html
+++ b/journeyprep.html
@@ -109,7 +109,7 @@ https://templatemo.com/tm-551-stand-blog
                       </ul>
                       <p>
                         Everything happened so quickly and it's only ten days remaining before my departure.  Lots of thoughts running through your mind in such a short time, but we'll get used to it.
-                        Hi everyone, I am one of your travellers, and this is how I can sum up the current experience for you.  Going abroad is never easy;  between choice of clothes, administrative procedures, and the budget to be planned, we are often lost and confused.  In our case, students, our destination is Poland, more precisely Lodz, let me give you some advice from my little experience.
+                        Hi everyone, I am one of your travellers, let me give you some advices from my little student experience on how you can prepare for your journey at Lodz.
                         <br><br>
                         The golden rule that I give you is this:
                         "Foresight will save you a lot of problems".  This advice can be seen as universal in all things, because without prior preparation you will later come across confusing situations.
