--- a/Wroclaw_dwarf.html
+++ b/Wroclaw_dwarf.html
@@ -108,8 +108,9 @@ https://templatemo.com/tm-551-stand-blog
                       <br><br>
                       During this article, I will tell you what I've done during my trip in Wrocław and some story of different dwarf that I've met. 
                     
+                      <br> I've done the trip with my girlfriend, and from the beginning we were just walking in the street going to the Hotel and we have seen on sidewalks some dwarfs, so we have took it in pictures. And after having drop our luggages at the hotel, we 
                       
-
+                      <br>
                       <img src="Images/Dwarf/Dwarf_Map.jpg" style="width: 100%;" alt="Map of Dwarf"> </p>
                       <p style="padding :0px ;margin :0px;color: black;font-size: 14px; text-align: center; border-top: 0px solid #eee; border-bottom: 0px solid #eee;">Map of Dwarf</p>
                       <p style="border-top: 0px solid #eee;border-bottom: 0px solid #eee; padding :0px ;">
@@ -157,15 +158,15 @@ https://templatemo.com/tm-551-stand-blog
                       </div>
                       <div class="content">
                           <ul>
-                              <li><a href="RomainM-1-post-details.html">
+                              <li><a href="Musculation.html">
                                   <h5>[Titre recent Post #1]</h5>
                                   <span>[Date correspondante]</span>
                               </a></li>
-                              <li><a href="post-details.html">
+                              <li><a href="article2eloi.html">
                                   <h5>[Titre recent Post #2]</h5>
                                   <span>[Date correspondante]</span>
                               </a></li>
-                              <li><a href="post-details.html">
+                              <li><a href="arrivallodz.html">
                                   <h5>[Titre recent Post #3]</h5>
                                   <span>[Date correspondante]</span>
                               </a></li>
