--- a/CinemaInLodz.html
+++ b/CinemaInLodz.html
@@ -150,11 +150,11 @@ From my point of view, I find the history of cinema in Lodz a fascinating subjec
                         </div>
                         <div class="content">
                             <ul>
-                                <li><a href="Second-Article-Clément.html">
+                                <li><a href="clement/Second-Article-Clément.html">
                                     <h5>ŁÓDŹ CATHEDRAL | VISIT</h5>
                                     <span>Mar. 6</span>
                                 </a></li>
-                                <li><a href="First-Article-Clement.html">
+                                <li><a href="clement/First-Article-Clement.html">
                                     <h5>ŁÓDŹ CATHEDRAL</h5>
                                     <span>Feb. 13</span>
                                 </a></li>
@@ -177,7 +177,7 @@ From my point of view, I find the history of cinema in Lodz a fascinating subjec
                         <li><a href="blogRomainM.html">Romain M </a></li>
                         <li><a href="blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
-                        <li><a href="blogClementC.html">Clément</a></li>
+                        <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
                         <li><a href="blogDamienL.html">Damien</a></li>
                         <li><a href="blogBastien.html">Bastien</a></li>
