--- a/Family_trip.html
+++ b/Family_trip.html
@@ -214,7 +214,7 @@ https://templatemo.com/tm-551-stand-blog
                                     <h5>MUSCULATION'S DIETETICS</h5>
                                     <span> Mar. 27</span>
                                 </a></li>
-                                <li><a href="Second-Article-Clément.html">
+                                <li><a href="clement/Second-Article-Clément.html">
                                     <h5>ŁÓDŹ CATHEDRAL | VISIT</h5>
                                     <span> Mar. 26</span>
                                 </a></li>
@@ -233,7 +233,7 @@ https://templatemo.com/tm-551-stand-blog
                         <li><a href="blogRomainM.html">Romain M </a></li>
                         <li><a href="blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
-                        <li><a href="blogClementC.html">Clément</a></li>
+                        <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
                         <li><a href="blogDamienL.html">Damien</a></li>
                         <li><a href="blogBastien.html">Bastien</a></li>
