--- a/blogRomainM.html
+++ b/blogRomainM.html
@@ -245,7 +245,7 @@
                       <li><a href="blogRomainM.html">Romain M</a></li>
                       <li><a href="blogEloiA.html">Eloi</a></li>
                       <li><a href="blogRomainJ.html">Romain J</a></li>
-                      <li><a href="blogClementC.html">Clément</a></li>
+                      <li><a href="clement/blogClementC.html">Clément</a></li>
                       <li><a href="blogTitouanR.html">Titouan</a></li>
                       <li><a href="blogDamienL.html">Damien</a></li>
                       <li><a href="blogBastien.html">Bastien</a></li>
