--- a/blog.html
+++ b/blog.html
@@ -127,11 +127,12 @@
                 </div>
               </div>
             -->
+            
 
             <div class="col-lg-6">
               <div class="blog-post">
                 <div class="blog-thumb">
-                  <img src="Images/Zatoka/Complex.jpg" style="height: 320epx;" alt="">
+                  <img src="Images/BlogInsta/WallBoat.jpg" style="height: 320epx;" alt="">
                 </div>
                 <div class="down-content">
                   <span>City</span>
