--- a/BlogInsta.html
+++ b/BlogInsta.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="Images/Zatoka/Complex.jpg" alt="">
+                      <img src="Images/BlogInsta/WallBoat.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>City</span>
